<resources>
    <string name="app_name">Lumine</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="reminders">Reminders</string>
    <string name="tasks">Tasks</string>
    <string name="new_note">New note</string>
    <string name="new_list">New list</string>
    <string name="new_drawing">New drawing</string>
    <string name="add_image">Add image</string>
    <string name="title">Title</string>
    <string name="write_something">Write something...</string>
    <string name="change_note_color">Change note color</string>
    <string name="move_to_trash">Move to trash</string>
    <string name="add_images">Add images</string>
    <string name="error_selecting_image">Error while selecting image</string>
    <string name="max_num_images_picked_reached">You reached the max number of images</string>
    <string name="done">Done</string>
    <string name="moving_to_trash">Moving to trash...</string>
    <string name="sync">Sync</string>
    <string name="no_connection_cannot_sync">Without an Internet connection, the app cannot sync
        your notes</string>
    <string name="ok">OK</string>
    <string name="dismiss">Dismiss</string>
    <string name="less_than_a_min_ago">Less than a minute ago</string>
    <string name="add_drawing">Add drawing</string>
    <string name="no_categories">No categories</string>
    <string name="insert_category_name">Insert category name...</string>
    <string name="create">Create</string>
    <string name="category_name_not_valid">Category name not valid</string>
    <string name="choose_category">Choose category</string>
    <string name="choose_valid_category">Choose a valid category</string>
    <string name="insert_text">Insert text</string>
    <string name="crash_title">Oh no!</string>
    <string name="crash_summary">It seems that a generic error happened.</string>
    <string name="feedback">Feedback</string>
    <string name="delete_category">Delete category</string>
    <string name="rename_category">Rename category</string>
    <string name="confirm">Confirm</string>
    <string name="more">More</string>
    <string name="import_from_file">Import from file</string>
    <string name="export_to_file">Export to file</string>
    <string name="warning">Warning</string>
    <string name="export_dialog_message">All your data will be exported to a file located in \n
        \"%s\"</string>
    <string name="import_dialog_message">Importing data from external file will erase all your
        current data. The app will restart. Do you still want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_file">Select file...</string>
    <string name="note_error_empty_title_and_body">Please add some text first</string>
    <string name="login_with_google">Login with Google</string>
    <string name="welcome_name">Hello %s!</string>
    <string name="upload_to_cloud">Upload to cloud</string>
    <string name="download_from_cloud">Download from cloud</string>
    <string name="download_from_cloud_dialog_message">All previous notes, tasks and reminders will
        be removed and will be replaced to the ones on cloud. Do you still want to continue?</string>
    <string name="found_notes">%d items found</string>
    <string name="skip">Skip</string>
    <string name="skip_login_dialog_message">If you don\'t login with your account, all your data
        won\'t ve saved on the cloud and you won\'t be able to sync it with your devices. Do you
        still want to continue?</string>
    <string name="generic_error">Something wrong happened...</string>
    <string name="note">Note</string>
    <string name="images">Images</string>
    <string name="misc_channel_name">Generic notifications</string>
    <string name="misc_channel_description">Contains miscellaneous notifications that this app will
        show</string>
    <string name="notes_synced_notification_title">Notes synced!</string>
    <string name="notes_synced_notification_text">All your notes have been successfully synced in
        cloud!</string>
    <string name="syncing_notes_notification_title">Syncing your notes on the cloud...</string>
    <string name="reminders_channel_name">Reminders</string>
    <string name="reminders_channel_description">All your reminders are part of this channel</string>
    <string name="remind_me_to">Remind me to...</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="cannot_choose_past_time">Cannot choose a past time</string>
    <string name="new_category">New category</string>
    <string name="delete_task">Delete task</string>
    <string name="delete_reminder">Delete reminder</string>
    <string name="slogan">Notes made simple</string>
    <string name="trash">Trash</string>
    <string name="add_task">Add a new task</string>
    <string name="category">Category</string>
    <string name="downloading_notes_from_cloud">Downloading notes from cloud...</string>
    <string name="no_trashed_notes">No trashed notes</string>
    <string name="empty_trash">Empty trash</string>
    <string name="restore_from_trash">Restore from Trash</string>
    <string name="task">Task</string>
    <string name="category_name">Category name</string>
    <string name="empty_note">Tap the pencil button on the bottom right of the screen</string>
    <string name="nothing_to_see_here">Nothing to see here</string>
    <string name="scan">Scan</string>
    <string name="fetching_text">Fetching text...</string>
    <string name="ocr_error">Couldn\'t find any text</string>
    <string name="ocr_beta">This feature is still in beta and could not work properly!</string>
    <string name="loading_images">Loading images...</string>
    <string name="logout">Log out</string>
    <string name="logout_message">All your <b>local</b> notes will be deleted. Do you want to
        continue?</string>
    <string name="accent_color">Accent Color</string>
    <string name="customization">Customization</string>
    <string name="accent_color_summary">Choose a custom accent color</string>
    <string name="applying_changes">Applying changes...</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_us_summary">Love Lumine? Leave a review on the Google Play Store page!</string>
    <string name="feedback_email_body_placeholder">Insert your text here, including OS version and
        phone model if possible.</string>
    <string name="you_need_to_login_first">You need to login first</string>
    <string name="remind_me_every_day">Remind me every day</string>
    <string name="onboarding_first_title">Your notes, everywhere</string>
    <string name="onboarding_first_description">Sync your notes across multiple devices</string>
    <string name="onboarding_second_title">Organize your life</string>
    <string name="onboarding_second_description">Create tasks, reminders and drawings</string>
    <string name="onboarding_third_title">We need some permissions</string>
    <string name="onboarding_third_description">The app needs them to work properly!</string>
    <string name="get_started">Get started</string>

    <string name="license_key_base_64" translatable="false">__REDACTED__</string>
</resources>