<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_notes"
        android:enabled="true"
        android:icon="@drawable/twotone_note_24px"
        android:title="@string/notes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_tasks"
        android:enabled="true"
        android:icon="@drawable/twotone_tasks_24px"
        android:title="@string/tasks"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reminders"
        android:enabled="true"
        android:icon="@drawable/twotone_reminders_24px"
        android:title="@string/reminders"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_trash"
        android:enabled="true"
        android:icon="@drawable/twotone_delete_24px"
        android:title="@string/trash"
        app:showAsAction="ifRoom" />
</menu>