<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/newTaskRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultNewNoteBackgroundColor">

    <LinearLayout
        android:id="@+id/newTaskContentWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:transitionName="@string/morph_transition">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backArrowImageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/twotone_arrow_back_24px" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/taskTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/add_task"
            android:maxLines="4"
            android:textColor="?colorAccent"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/taskCategoryWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/almostWhiteColorAccent"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_toStartOf="@+id/taskNewCategoryButton">

                    <LinearLayout
                        android:id="@+id/taskCategoryTitleWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/twotone_category_24px"
                            app:tint="?colorAccent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:text="@string/category"
                            android:textColor="?colorAccent"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/taskCategoryNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/taskCategoryTitleWrapper"
                        android:layout_marginTop="16dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/choose_category"
                        android:textColor="?colorAccent"
                        android:textSize="24sp" />

                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/taskNewCategoryButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/lightColorAccent"
                    app:cardCornerRadius="18dp"
                    app:cardElevation="0dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/twotone_add_24px"
                        app:tint="?colorAccent" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.tuann.floatingactionbuttonexpandable.FloatingActionButtonExpandable
        android:id="@+id/newTaskFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:fab_bg_color="?colorAccent"
        app:fab_content="@string/confirm"
        app:fab_duration="100"
        app:fab_expanded="true"
        app:fab_icon="@drawable/twotone_done_24px"
        app:fab_padding="16dp"
        app:fab_padding_text_icon="16dp"
        app:fab_text_color="@android:color/white"
        app:fab_text_size="18sp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>